--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
+                <properties>
+        		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        		<maven.compiler.source>1.8</maven.compiler.source>
+        		<maven.compiler.target>1.8</maven.compiler.target>
+    		</properties>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
